# ipfrs-ai

./: .gitignore  ARCHITECTURE_GUIDE.md  CONTRIBUTORS.md  IPFRS_ARCHITECTURE.md  IPFRS_ARCHITECTURE_MASTER.md  IPFRS_ARCHITECTURE_SONNET.md  IPFRS_DEEP_ARCHITECTURE.md  README.md
ipfrs_source/: .gitignore  ARCHITECTURE_DDD.md  ARCHITECTURE_DDD_DEEP.md  ARCHITECTURE_INDEX.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IPFRS0.2.0.md  IPFRS0.3.0.md  LICENSE  README.md  TODO.md
ipfrs_source/.cargo/: config.toml
ipfrs_source/.github/: CONTRIBUTING.md  FUNDING.yml  pull_request_template.md
ipfrs_source/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
ipfrs_source/.github/workflows/: ci.yml.disabled  npm-publish.yml
ipfrs_source/book/: README.md  book.toml
ipfrs_source/book/src/: SUMMARY.md  introduction.md
ipfrs_source/book/src/getting-started/: concepts.md  configuration.md  installation.md  quick-start.md
ipfrs_source/crates/ipfrs/: Cargo.toml  README.md  TODO.md
ipfrs_source/crates/ipfrs-cli/: CHANGELOG.md  Cargo.toml  README.md  TODO.md  USER_GUIDE.md
ipfrs_source/crates/ipfrs-cli/benches/: cli_benchmarks.rs
ipfrs_source/crates/ipfrs-cli/src/: cli_tests.rs  config.rs  connectivity.rs  dispatch.rs  lib.rs  main.rs  output.rs  plugin.rs  progress.rs  shell.rs  tui.rs  utils.rs
ipfrs_source/crates/ipfrs-cli/tests/: integration_tests.rs
ipfrs_source/crates/ipfrs-core/: Cargo.toml  README.md  TODO.md
ipfrs_source/crates/ipfrs-core/benches/: core_benchmarks.rs
ipfrs_source/crates/ipfrs-core/fuzz/: Cargo.toml  README.md
ipfrs_source/crates/ipfrs-core/src/: arrow.rs  batch.rs  block.rs  block_cache.rs  car.rs  chunking.rs  cid.rs  codec_registry.rs  compression.rs  config.rs  dag.rs  error.rs  hash.rs  integration.rs  ipld.rs  jose.rs  lib.rs  manifest.rs  merkle_batch.rs  metrics.rs  parallel_chunking.rs  pool.rs  safetensors.rs  streaming.rs  streaming_compression.rs  tensor.rs  types.rs  utils.rs  wasm_compat.rs
ipfrs_source/crates/ipfrs-core/tests/: ipfs_compat_tests.rs  property_tests.proptest-regressions  property_tests_block.rs  property_tests_codec.rs  property_tests_pool_hash.rs  property_tests_storage.rs
ipfrs_source/crates/ipfrs-interface/: CONFIGURATION.md  Cargo.toml  MIGRATION_FROM_KUBO.md  PERFORMANCE.md  README.md  TODO.md  build.rs  ipfrs.h  ipfrs.pyi  openapi.yaml
ipfrs_source/crates/ipfrs-interface/benches/: http_benchmarks.rs
ipfrs_source/crates/ipfrs-interface/examples/: CLIENT_EXAMPLES.md  MMAP_GUIDE.md  README.md  comprehensive_client.rs.disabled  comprehensive_server.rs.disabled  grpc_client.rs.disabled  grpc_python_client.py  grpc_server.rs.disabled  javascript_client.js  mmap_tensor_server.rs  python_client.py  simple_server.rs
ipfrs_source/crates/ipfrs-interface/proto/: block.proto  dag.proto  file.proto  geo.proto  tensor.proto
ipfrs_source/crates/ipfrs-interface/src/: arrow.rs  auth.rs  auth_handlers.rs  backpressure.rs  binary_protocol.rs  ffi.rs  gradient_sync.rs  graphql.rs  grpc.rs  lib.rs  metrics.rs  metrics_middleware.rs  middleware.rs  mmap.rs  oauth2.rs  python.rs  safetensors.rs  streaming.rs  tensor.rs  tls.rs  websocket.rs  zerocopy.rs
ipfrs_source/crates/ipfrs-interface/tests/: kubo_compatibility.rs
ipfrs_source/crates/ipfrs-knowledge/: Cargo.toml
ipfrs_source/crates/ipfrs-knowledge/src/: error.rs  gc.rs  graph.rs  hamt.rs  lib.rs  node.rs  project.rs  store.rs  tiered.rs  vector.rs
ipfrs_source/crates/ipfrs-network/: Cargo.toml  README.md  TODO.md
ipfrs_source/crates/ipfrs-network/.ipfrs/: identity.key
ipfrs_source/crates/ipfrs-network/docs/: ARCHITECTURE.md  CONFIGURATION.md  NAT_TRAVERSAL.md  PEER_DISCOVERY.md
ipfrs_source/crates/ipfrs-network/examples/: arm_profiling.rs  auto_tuning.rs  background_mode.rs  bandwidth_throttling.rs  basic_node.rs  bitswap_exchange.rs  connection_management.rs  connection_migration.rs  connection_rate_limiting.rs  custom_dht.rs  dht_operations.rs  full_network_integration.rs  geographic_routing.rs  health_monitoring.rs  intelligent_peer_selection.rs  ipfs_connectivity_test.rs  load_testing.rs  low_memory_node.rs  metrics_prometheus.rs  metrics_time_series.rs  multipath_quic.rs  network_configuration_presets.rs  network_diagnostics.rs  network_facade_demo.rs  network_monitoring.rs  network_policy.rs  network_semantic_search.rs  network_simulation.rs  offline_queue_demo.rs  peer_reputation.rs  performance_benchmarking.rs  pubsub_messaging.rs  quality_prediction.rs  quic_monitoring.rs  session_management.rs  tor_privacy.rs  traffic_analysis.rs  utils_demo.rs
ipfrs_source/crates/ipfrs-network/src/: activation.rs  adaptive_bandwidth_allocator.rs  adaptive_lookup.rs  adaptive_peer_scheduler.rs  adaptive_polling.rs  adaptive_routing_engine.rs  adaptive_timeout.rs  announcement_manager.rs  anti_entropy.rs  arm_profiler.rs  auto_tuner.rs  background_mode.rs  ban_list.rs  bandwidth_allocator.rs  bandwidth_budget.rs  bandwidth_monitor.rs  batch_resolver.rs  behavior_classifier.rs  benchmarking.rs  bitswap.rs  block_transfer.rs  blockfetch.rs  bloom_filter.rs  bootstrap.rs  bootstrap_coordinator.rs  capability_registry.rs  cert_pin.rs  churn_manager.rs  churn_resilience.rs  circuit_breaker.rs  congestion_controller.rs  connection_drainer.rs  connection_health.rs  connection_health_monitor.rs  connection_limiter.rs  connection_manager.rs  connection_migration.rs  (+121 more)
ipfrs_source/crates/ipfrs-nodejs/: Cargo.toml  README.md  TODO.md  package.json
ipfrs_source/crates/ipfrs-python/: Cargo.toml  README.md  TODO.md  pyproject.toml
ipfrs_source/crates/ipfrs-semantic/: Cargo.toml  README.md  TODO.md
ipfrs_source/crates/ipfrs-storage/: Cargo.toml  KUBO_COMPARISON.md  README.md  STORAGE_GUIDE.md  TODO.md
ipfrs_source/crates/ipfrs-tensorlogic/: Cargo.toml  INTEGRATION_GUIDE.md  README.md  TODO.md  graph.dot  proof.dot
ipfrs_source/crates/ipfrs-transport/: ARCHITECTURE.md  CONFIGURATION.md  Cargo.toml  PROTOCOL.md  README.md  TODO.md  TUNING.md
ipfrs_source/crates/ipfrs-wasm/: Cargo.toml  README.md  TODO.md  package.json
(+908 files in other folders)
