[workspace]
resolver = "2"
members = [
    "crates/ipfrs",
    "crates/ipfrs-core",
    "crates/ipfrs-network",
    "crates/ipfrs-storage",
    "crates/ipfrs-transport",
    "crates/ipfrs-semantic",
    "crates/ipfrs-interface",
    "crates/ipfrs-tensorlogic",
    "crates/ipfrs-cli",
    "crates/ipfrs-wasm",
    "crates/ipfrs-nodejs",
    "crates/ipfrs-python",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["TensorLogic Architect"]
license = "Apache-2.0"
repository = "https://github.com/cool-japan/ipfrs"
homepage = "https://github.com/cool-japan/ipfrs"
rust-version = "1.90"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.52", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Networking (libp2p stack)
libp2p = { version = "0.56", features = ["tcp", "tokio", "quic", "noise", "yamux", "gossipsub", "kad", "identify", "ping", "macros", "autonat", "dcutr", "relay", "mdns", "rsa"] }
libp2p-quic = "0.13"
quinn = "0.11"

# Storage backends
sled = "0.34"
# parity-db = "0.4"  # Uncomment when needed

# IPLD and content addressing
cid = { version = "0.11", features = ["serde-codec"] }
multihash = "0.19"
multihash-codetable = { version = "0.2", features = ["sha2", "sha3", "blake2b", "blake2s", "blake3"] }
multibase = "0.9"

# Zero-copy and serialization
arrow = { version = "59", features = ["ipc"] }
arrow-array = "59"
arrow-buffer = "59"
arrow-schema = "59"
safetensors = "0.8"
bytes = "1.11"
memmap2 = "0.9"
rand = "0.10"

# Vector search (HNSW)
# Using hnsw_rs as placeholder for semantic search
hnsw_rs = "0.3"

# Linear algebra (for OPQ rotation matrix learning)
nalgebra = "0.35"

# Cryptography
blake3 = "1.8"
sha2 = "0.11"
hex = "0.4"
getrandom = { version = "0.4", features = [] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Distributed tracing
opentelemetry = { version = "0.32", features = ["trace"] }
opentelemetry-otlp = { version = "0.32", features = ["tonic", "trace"] }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio", "trace"] }
tracing-opentelemetry = "0.33"

# CLI
clap = { version = "4.6", features = ["derive"] }

# Web server
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
hyper = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oxicode = { version = "0.2.4", features = ["derive", "serde"] }
ciborium = "0.2"
base64 = "0.22"

# Utilities
dashmap = "6.2"
parking_lot = "0.12"
once_cell = "1.21"
lru = "0.18"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.12"

# Benchmarking
criterion = { version = "0.8", features = ["async_tokio"] }

# Testing
tempfile = "3.27"

# Property-based testing
proptest = "1.11"

# Authentication & Authorization
jsonwebtoken = { version = "10.4", default-features = false, features = ["rust_crypto"] }
bcrypt = "0.19"
uuid = { version = "1.23", features = ["v4", "serde"] }

# TLS/Crypto
rustls = { version = "0.23", default-features = false, features = ["std"] }
rustls-rustcrypto = "0.0.2-alpha"
rcgen = "0.14"

# Database
parity-db = "0.5"

# Additional networking
tokio-tungstenite = "0.29"
reqwest = { version = "0.13", features = ["json"] }

# Metrics (alternative)
prometheus = "0.14"

# GraphQL
async-graphql = { version = "7.2", features = ["chrono"] }
async-graphql-axum = "7.2"

# gRPC
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-build = "0.14"
prost-build = "0.14"

# Python bindings
pyo3 = { version = "0.29" }
pyo3-build-config = "0.29"

# Compression — COOLJAPAN Pure Rust via OxiARC (no C/Fortran deps)
oxiarc-zstd = "0.3.3"
oxiarc-lz4 = "0.3.3"
oxiarc-snappy = "0.3.3"
oxiarc-deflate = "0.3.3"

# Encryption
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1.9", features = ["derive"] }

# Hash algorithms
blake2 = "0.10"
sha3 = "0.12"
crc32fast = "1.5"

# AWS SDK
aws-config = "1.8"
aws-sdk-s3 = "1.136"

# HTTP utilities
url = "2.5"
urlencoding = "2.1"

# Async utilities
tokio-stream = "0.1"
async-stream = "0.3"
futures-util = "0.3"

# CLI utilities
colored = "3.1"
indicatif = "0.18"
toml = "1.1"
dirs = "6.0"
is-terminal = "0.4"
rustyline = "18.0"
ratatui = "0.30"
crossterm = "0.29"
clap_complete = "4.6"
clap_mangen = "0.3"
serde_yaml = "0.9"

# System utilities
sysinfo = "0.39"
fastrand = "2.4"

# Internal IPFRS crates
ipfrs-core = { path = "crates/ipfrs-core", version = "0.2.0" }
ipfrs-storage = { path = "crates/ipfrs-storage", version = "0.2.0" }
ipfrs-network = { path = "crates/ipfrs-network", version = "0.2.0" }
ipfrs-tensorlogic = { path = "crates/ipfrs-tensorlogic", version = "0.2.0" }
ipfrs-transport = { path = "crates/ipfrs-transport", version = "0.2.0" }
ipfrs-semantic = { path = "crates/ipfrs-semantic", version = "0.2.0" }
ipfrs-interface = { path = "crates/ipfrs-interface", version = "0.2.0" }
ipfrs = { path = "crates/ipfrs", version = "0.2.0" }
num_cpus = "1.17"
lazy_static = "1.5"
bytemuck = "1.25"

# Serialization extensions
serde-pickle = "1.2"

# HTTP server extensions
http-body-util = "0.1"
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls-pemfile = "2.2"

# Testing extensions
md5 = "0.8"

# Node.js bindings (NAPI-RS)
napi = { version = "3.9", features = ["async", "napi8"] }
napi-derive = "3.5"
napi-build = "2.3"

# WebAssembly bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", default-features = false }
console_error_panic_hook = "0.1"
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.release-arm]
inherits = "release"
# ARM-specific optimizations
# Enable NEON/SVE when available
