[package]
name = "ipfrs-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for IPFRS distributed content-addressed storage"
keywords = ["ipfs", "cli", "storage", "distributed", "content-addressing"]
categories = ["command-line-utilities"]
documentation = "https://docs.rs/ipfrs-cli"
homepage.workspace = true

[lib]
name = "ipfrs_cli"
path = "src/lib.rs"

[[bin]]
name = "ipfrs"
path = "src/main.rs"

[[bin]]
name = "ipfrs-genman"
path = "src/bin/genman.rs"

[dependencies]
# Main IPFRS library
ipfrs = { workspace = true }
ipfrs-core = { workspace = true }
ipfrs-network = { workspace = true }
ipfrs-storage = { workspace = true }
ipfrs-interface = { workspace = true }
ipfrs-semantic = { workspace = true }
ipfrs-tensorlogic = { workspace = true }

# CLI
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Utilities
bytes = { workspace = true }

# CLI enhancements
colored = { workspace = true }
indicatif = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
is-terminal = { workspace = true }
rustyline = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "cli_benchmarks"
harness = false
