[package]
name = "ipfrs-interface"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "HTTP, gRPC, GraphQL and Python interfaces for IPFRS distributed storage"
keywords = ["http", "grpc", "graphql", "api", "interface"]
categories = ["web-programming", "api-bindings"]
documentation = "https://docs.rs/ipfrs-interface"
homepage.workspace = true

[features]
default = []
python = ["pyo3"]
# Enable tonic-generated gRPC service stubs (requires proto files and tonic-build).
grpc = ["tonic-prost"]

[dependencies]
# Local crates
ipfrs-core = { workspace = true }
ipfrs-storage = { workspace = true }
ipfrs-semantic = { workspace = true }
ipfrs-tensorlogic = { workspace = true }
ipfrs-knowledge = { workspace = true }
ipfrs-network = { workspace = true }

# Zero-copy data structures
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-schema = { workspace = true }
safetensors = { workspace = true }
bytes = { workspace = true }
memmap2 = { workspace = true }
oxiarc-zstd = { workspace = true }

# Async
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Web server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
axum-server = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

# GraphQL
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }

# Authentication & Authorization
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
urlencoding = { workspace = true }

# Streaming
async-stream = { workspace = true }

# Metrics
prometheus = { workspace = true }
lazy_static = { workspace = true }

# gRPC
tonic = { workspace = true }
tonic-prost = { version = "0.14", optional = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Python bindings (optional)
# Note: "extension-module" feature is for building Python extensions.
# For tests, use "auto-initialize" instead to enable proper linking.
pyo3 = { workspace = true, features = ["auto-initialize"], optional = true }

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build = "0.14"
prost-build = { workspace = true }
pyo3-build-config.workspace = true

[dev-dependencies]
criterion = { workspace = true }
oxiarc-deflate = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
tempfile = { workspace = true }

[[bench]]
name = "http_benchmarks"
harness = false
