[package]
name = "ipfrs-nodejs"
version.workspace = true
edition.workspace = true
authors = ["COOLJAPAN OU (Team Kitasan)"]
description = "Node.js bindings for IPFRS distributed content-addressed storage system"
keywords = ["ipfs", "nodejs", "napi", "bindings", "distributed"]
categories = ["api-bindings"]
documentation = "https://docs.rs/ipfrs-nodejs"
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# IPFRS core dependencies
ipfrs.workspace = true
ipfrs-core.workspace = true
ipfrs-semantic.workspace = true
ipfrs-tensorlogic.workspace = true

# NAPI-RS for Node.js bindings
napi.workspace = true
napi-derive.workspace = true

# Async runtime
tokio.workspace = true

# Synchronization
parking_lot.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Hash for CID computation
sha2.workspace = true

# Byte buffer
bytes.workspace = true

[build-dependencies]
napi-build.workspace = true

[features]
default = []
# Enable NAPI-RS bindings (set automatically by napi-build when building a .node addon)
napi = []
