[package]
name = "ipfrs-python"
version.workspace = true
publish = false
edition.workspace = true
authors.workspace = true
description = "Python bindings for IPFRS distributed content-addressed storage system"
keywords = ["ipfs", "python", "pyo3", "bindings", "distributed"]
categories = ["api-bindings"]
documentation = "https://docs.rs/ipfrs-python"
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "ipfrs"
crate-type = ["cdylib"]
doc = false

[dependencies]
# IPFRS core dependencies
ipfrs.workspace = true
ipfrs-core.workspace = true
ipfrs-semantic.workspace = true
ipfrs-tensorlogic.workspace = true

# PyO3 for Python bindings
pyo3 = { workspace = true, features = ["extension-module", "abi3-py38"] }

# Async runtime (for blocking on async Rust functions)
tokio.workspace = true

# Synchronization
parking_lot.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[build-dependencies]
pyo3-build-config.workspace = true
