[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ipfrs"
version = "0.2.0"
description = "Inter-Planetary File Rust System - Content-addressed storage with semantic search and logic programming"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "IPFRS Contributors"}
]
keywords = ["ipfs", "content-addressed", "semantic-search", "logic-programming", "distributed"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/cool-japan/ipfrs"
Repository = "https://github.com/cool-japan/ipfrs"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "ipfrs"
